tests/ui/rfcs/rfc-2632-const-trait-impl/staged-api.unstable.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/staged-api.rs:4:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: `<Foo as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:34:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(foo)]` to the crate attributes to enable

error: `<Foo as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:45:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(foo)]` to the crate attributes to enable

error: `<staged_api::Unstable as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:53:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: `<Foo as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:55:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: `const_context_not_const_stable` is not yet stable as a const fn
  --> $DIR/staged-api.rs:57:5
   |
LL |     const_context_not_const_stable()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: aborting due to 5 previous errors; 1 warning emitted

